--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,6 @@
     <string name="appCloseText">Beenden</string>
     <string name="appRunText">Abbrechen</string>
     <string name="anwendung_beenden">Anwendung beenden</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="replacementFragmentText">Mein Replacement Fragment</string>
 </resources>
